# fastapi-project-sample

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ceccb2733163_add_project_table.py
src/apps/project/: api.py  crud.py  models.py  schemas.py  service.py
src/apps/user/: api.py  schemas.py
src/core/db/: db_base.py
src/core/dependency/: db_dep.py  paginate_dep.py
src/core/domain/: constant.py  exception.py  loc_env.py  schemas_base.py  settings.py
src/core/utils/: func.py
