[tool.poetry]
name = "nebula-backend"
version = "0.1.0"
description = ""
authors = ["menghuhu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.110.0"
uvicorn = "0.27.1"
sqlalchemy = "2.0.28"
alembic = "1.13.1"
asyncpg = "0.29.0"
greenlet = "^3.0.3"
flake8 = "^7.0.0"
pre-commit = "^3.6.2"
black = "^24.3.0"
ruff = "^0.3.3"
mypy = "^1.9.0"
pylint = "^3.1.0"
isort = "^5.13.2"
celery = {extras = ["redis"], version = "^5.3.6"}
authing = "^5.1.0"
websockets = "^12.0"
email-validator = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
